@@ -1,6 +1,10 @@
 // $Id$
 // $Name$
 
+Image Picker  for D7 in DRUPAL-7--1, 20010-12-09
+------------------------------------
+by hutch, fixed iframe js
+
 Image Picker  for D7 in DRUPAL-7--1, 20010-12-01
 ------------------------------------
 by hutch, added imagepicker_variables table
